[gd_scene load_steps=6 format=3 uid="uid://cq6qrrdwgxiid"]

[ext_resource type="Script" path="res://Scripts/hud.gd" id="1_m37b5"]
[ext_resource type="FontFile" uid="uid://ccfqm3vdf1qg" path="res://Assets/Fonts/AmaticSC-Regular.ttf" id="2_e8m4c"]
[ext_resource type="Texture2D" uid="uid://baf63n7ipek5i" path="res://Assets/Sprites/sprite_logo.png" id="2_h3cku"]
[ext_resource type="Script" path="res://Scripts/Logo.gd" id="3_tfvbx"]
[ext_resource type="Theme" uid="uid://fifqueo1ohan" path="res://Assets/Themes/button_theme.tres" id="4_pix71"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_m37b5")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(584, 256)
rotation = -0.120428
texture = ExtResource("2_h3cku")
script = ExtResource("3_tfvbx")

[node name="LogoTimer" type="Timer" parent="Logo"]
autostart = true

[node name="Score1" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.0
offset_right = -130.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.439216, 0.258824, 0.0784314, 1)
theme_override_fonts/font = ExtResource("2_e8m4c")
theme_override_font_sizes/font_size = 128
text = "0"

[node name="Score2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 130.0
offset_right = 170.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.439216, 0.258824, 0.0784314, 1)
theme_override_fonts/font = ExtResource("2_e8m4c")
theme_override_font_sizes/font_size = 128
text = "0"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = 10.0
offset_right = 134.0
offset_bottom = 98.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.439216, 0.258824, 0.0784314, 1)
theme_override_fonts/font = ExtResource("2_e8m4c")
theme_override_font_sizes/font_size = 64
text = "Message"
horizontal_alignment = 1

[node name="New Game" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -208.0
offset_right = 96.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_pix71")
theme_override_fonts/font = ExtResource("2_e8m4c")
theme_override_font_sizes/font_size = 48
text = "New Game"

[node name="Quit" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -79.0
offset_top = -128.0
offset_right = 95.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_pix71")
theme_override_fonts/font = ExtResource("2_e8m4c")
theme_override_font_sizes/font_size = 48
text = "Quit Game"

[node name="Singleplayer" type="Button" parent="."]
visible = false
offset_left = 344.0
offset_top = 424.0
offset_right = 541.0
offset_bottom = 493.0
theme = ExtResource("4_pix71")
theme_override_fonts/font = ExtResource("2_e8m4c")
theme_override_font_sizes/font_size = 48
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="."]
visible = false
offset_left = 632.0
offset_top = 424.0
offset_right = 818.0
offset_bottom = 493.0
theme = ExtResource("4_pix71")
theme_override_fonts/font = ExtResource("2_e8m4c")
theme_override_font_sizes/font_size = 48
text = "Multiplayer"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="EndGame" type="Button" parent="PauseMenu"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -128.0
offset_right = 96.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_pix71")
theme_override_fonts/font = ExtResource("2_e8m4c")
theme_override_font_sizes/font_size = 48
text = "End Game"

[node name="ResumeGame" type="Button" parent="PauseMenu"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -224.0
offset_right = 96.0
offset_bottom = -155.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_pix71")
theme_override_fonts/font = ExtResource("2_e8m4c")
theme_override_font_sizes/font_size = 48
text = "Resume"

[connection signal="timeout" from="Logo/LogoTimer" to="Logo" method="_on_logo_timer_timeout"]
[connection signal="pressed" from="New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="PauseMenu/EndGame" to="." method="_on_end_game_pressed"]
[connection signal="pressed" from="PauseMenu/ResumeGame" to="." method="_on_resume_game_pressed"]
